# pKAI

./: README.md  justfile  pyproject.toml
src/pkai/: __init__.py  __main__.py  pKAI.py  protein.py  residue.py
